fix status align

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -455,9 +455,8 @@ body {
     .customers__status {
       display: inline-block;
       height: 29px;
-      line-height: 29px;
+      line-height: 27px;
       width: 80px;
-      padding: 0 18px;
       border-radius: 4px;
       font-size: 14px;
       text-align: center;
@@ -478,7 +477,6 @@ body {
         background-color: #ffc5c5;
         color: #df0404;
         border: 1px solid #df0404;
-        padding: 0 12px;
       }
     }
 
